--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "12.16.1",
-    "npm": ">=6.0.0"
+    "node": "12.16.1"
   },
   "main": "index.js",
   "scripts": {
