--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.16.1",
+    "npm": ">=6.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
