--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-select": "^4.0.2",
+    "react-test-renderer": "^17.0.1",
     "react-toastify": "^7.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -45,10 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "jest": "^26.6.3",
-    "jest-enzyme": "^7.1.2"
-  }
+  "devDependencies": {}
 }
