--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./index.js ",
-    "build":"react-scripts build",
+    "build": "react-scripts build",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-    
   },
   "author": "Makokha",
   "license": "ISC",
@@ -24,6 +23,7 @@
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "react-test-renderer": "^17.0.1",
     "validator": "^13.5.2"
   }
 }
